--- a/estilos/paises.css
+++ b/estilos/paises.css
@@ -1,3 +1,6 @@
+.pagepaises{
+    width: 100%;
+}
 h1{
     text-align: center;
     font-size: 2.5em;
@@ -13,17 +16,21 @@ h1{
     list-style: none;
     text-align: center;
     font-weight: 200;
-    margin-left: 20px;
+    margin-left: 40px;
     width: 250px;
     border:none;
 }
+.sub-menu{
+    width: 150px;
+    padding: 10px 45px;
+
+}
 .paisos >li >ul >li{
     list-style: none;
-    padding: 10px 0px;
     margin-left:-30px;
     text-align: left;
     transition: 0.5s;
-    width: 250px;
+    width: 240px;
     border: none;
     font-size: 0.7em;
     border-bottom: 1px solid #c1c1c1;
