--- a/firebase/getArticles/getArticle.css
+++ b/firebase/getArticles/getArticle.css
@@ -7,7 +7,7 @@ body{
 .article{
   background-color: rgb(39, 39, 38);
   padding: 30px;
-  width: 800px;
+  width:90%;
   height: auto;
   margin:10px;
   border-radius: 20px;
