actualizada sonido y splashpage

--- a/estilos/home.css
+++ b/estilos/home.css
@@ -2,6 +2,12 @@ body{
     background-color: lightsteelblue;
 
 }
+.contenido-paginas{
+    display: none;
+ }
+ #project-page{
+     display: none;
+ }
 .contenido-pag{
     display: flex;
     justify-content: space-between;
