--- a/firebase/generadorArticle/generadorArticles.css
+++ b/firebase/generadorArticle/generadorArticles.css
@@ -76,3 +76,12 @@ body{
   background-color: green;
   padding: 10px;
 }
+
+#contingut {
+  width: 80%; 
+  height: auto; 
+  padding: 20px;
+  background-color: whitesmoke;
+  color: black;
+  margin: 20px;
+  }
