--- a/css/carouselowl.css
+++ b/css/carouselowl.css
@@ -15,7 +15,7 @@
 
 
 .carouselowl_contenedor {
-	max-width: 1200px;
+	max-width: 80vw;
 	width: 100%;
 	margin: 50px auto 100px auto;
 	position: relative;
@@ -29,7 +29,7 @@
 .carousel__siguiente {
 	position: absolute;
 	display: block;
-	width: 30px;
+	width: 40px;
 	height: 50px;
 	border: none;
 	top: calc(50% - 50px);
@@ -39,7 +39,7 @@
 	background: none;
 	color: rgb(12, 12, 12);
 	opacity: 50%;
-    font-size: 2.3em;
+    font-size: 2.3rem;
 }
 
 .carousel__anterior:hover,
@@ -48,11 +48,12 @@
 }
 
 .carousel__anterior {
-	left: -30px;
+	left: -50px;
+	z-index: 1;
 }
 
 .carousel__siguiente {
-	right: -30px;
+	right: -40px;
 }
 
 .carousel__lista {
@@ -64,14 +65,14 @@
 }
 .carousel__elemento {
 	text-align: center;
-	margin-left: 20px;
+	margin-left: 2vw;
 
 }
 
 .carousel__indicadores .glider-dot {
 	display: block;
-	width: 30px;
-	height: 40px;
+	width: 20px;
+	height: 30px;
 	background: rgb(151, 151, 151);
 	opacity: .2;
 	border-radius: 0;
@@ -90,17 +91,4 @@
     margin:-5px 0px 50px 0px;
     color:white;
 }
-.info-tarjeta
-@media screen and (max-width: 800px) {
-	body {
-		padding: 40px 0;
-	}
 
-	.contenido-principal {
-		flex-direction: column;
-	}
-
-	.contenido-principal > * {
-		width: 100%;
-	}
-}
