--- a/css/nav.css
+++ b/css/nav.css
@@ -5,10 +5,9 @@
   .cab{
     margin:0;
     display: flex;
-    justify-content: space-between;
     align-items: flex-end;
     height: 250px;
-    position: relative;
+
 }
 .cab-fondo{
     width: 100%;
@@ -31,11 +30,14 @@
     width: 400px;
      
 }
-.brand{
+.brand {
+  width: 100%;
     position: absolute;
-    margin-left: 40%;
-    margin-right:auto;
-
+    text-align: center;
+    margin-bottom:30px;
+}
+.brand img {
+ max-width: 300px;
 }
 
 .social a{
@@ -68,11 +70,13 @@
 .topnav {
 overflow: hidden;
 background-color: white;
-padding-left: 60px;
+padding-left: 0px;
 position: sticky;
 top:-1px;
 z-index: 1;
+
 }
+
 
 .topnav a {
 float: left;
@@ -84,6 +88,7 @@ text-decoration: none;
 font-size: 17px;
 transition: 0.5s;
 border-right:1px solid #c1c1c1;
+max-width: 100%;
 width: 200px;
 }
 .topnav a:nth-child(1){
@@ -107,23 +112,66 @@ display: none;
 }
 
 @media screen and (max-width: 600px) {
-.topnav a:not(:first-child) {display: none;}
+.topnav a {display: none;
+width: 100vw;}
 .topnav a.icon {
-  float: right;
   display: block;
+  width: 100%;
+
 }
 }
 
 @media screen and (max-width: 600px) {
 .topnav.responsive {position: relative;}
+.topnav a{
+    width: 600px;
+}
 .topnav.responsive .icon {
   position: absolute;
-  right: 0;
-  top: 0;
+
 }
 .topnav.responsive a {
   float: none;
   display: block;
-  text-align: left;
+  text-align: center;
+}
+.nav-margin{
+  margin-top: 50px;
 }
 }
+@media screen and (min-width: 800px) {
+    .topnav.responsive {
+      position: relative;}
+    .topnav a{
+      width:130px;
+
+    }
+    .topnav.responsive .icon {
+      position: absolute;
+    
+    }
+    .topnav.responsive a {
+      float: none;
+      display: block;
+      text-align: center;
+
+    }
+
+    }
+    @media screen and (max-width: 1000px) {
+        .topnav.responsive {position: relative;}
+      
+        .topnav.responsive .icon {
+          position: absolute;
+        
+        }
+        .topnav a{
+          max-width:100vw;
+      }
+        .topnav.responsive a {
+          float: none;
+          display: block;
+          text-align: center;
+        }
+
+        }
