--- a/css/paises.css
+++ b/css/paises.css
@@ -10,8 +10,9 @@
 }
 .pagepaises h4{
     text-align: center;
-    font-size: 2.5em;
-    margin:20px 0px 50px 0px;
+    font-size: 1.5em;
+    margin:20px 0 50px 0;
+    font-weight: 400;
 }
 .paisos{
     display: flex;
