--- a/css/slide-ultima-hora.css
+++ b/css/slide-ultima-hora.css
@@ -20,6 +20,9 @@
     }
   }
   
+  .lastpost-wrapper{
+    width: 100%;
+  }
   .last_hour{
     width: 200px;
     margin: 1px 10px 60px 0px;
@@ -42,7 +45,6 @@
     margin: auto auto auto 200px ;
     overflow: hidden;
     position: relative;
-    width: 86.8%;
     top: -107px;
     border-top: 1px solid rgb(187, 187, 187);
   }
