--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -126,9 +126,12 @@
     }
 
         @media screen and (max-width: 1000px) {
-         
+         #clock{
+             margin: 0px;
+
+         }
         .article {
-            width:100vw;
+            width:100%;
         }
      
       .article .titol{
