--- a/css/actualitat.css
+++ b/css/actualitat.css
@@ -21,7 +21,7 @@
 .subtitol-article{
     font-size: 1.5em;
     font-weight: 300;
-    margin: 0.5em 0px 10px 0px;
+    margin: 10 0px ;
 }
 
 .article-actualitat p{
