--- a/css/carousel3d.css
+++ b/css/carousel3d.css
@@ -6,14 +6,14 @@
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin: auto;
 }
-.article{
+.article3d{
 height: 450px;
   width: 900px;
   background-color: #F2F2F5;
   display: inline-block;
   position: absolute;
 }
-.article .titol{
+.article3d .titol{
     position: absolute;
     background-color: #08103E;
     width: 100%;
