--- a/css/nav.css
+++ b/css/nav.css
@@ -70,7 +70,7 @@
 .topnav {
 overflow: hidden;
 background-color: white;
-padding-left: 0px;
+padding-left: 60px;
 position: sticky;
 top:-1px;
 z-index: 1;
@@ -112,6 +112,9 @@ display: none;
 }
 
 @media screen and (max-width: 600px) {
+  .topnav{
+    padding-left: 0;
+  }
 .topnav a {display: none;
 width: 100vw;}
 .topnav a.icon {
@@ -166,7 +169,7 @@ width: 100vw;}
         
         }
         .topnav a{
-          max-width:100vw;
+          max-width:100%;
       }
         .topnav.responsive a {
           float: none;
