--- a/firebase/editarArticles/editarArticle.css
+++ b/firebase/editarArticles/editarArticle.css
@@ -1,15 +1,18 @@
 body{
   margin: 50px;
-  font-family: 'Courier New', Courier, monospace;
-  background-color: rgb(22, 22, 22);
-  color: white;
+font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  background-color: rgb(22, 22, 22);
+  color: rgb(0, 0, 0);
+  background-color: rgb(218, 218, 218);
+}
+h1 {
+  text-align: center;
 }
 .article{
-  background-color: rgb(39, 39, 38);
+  background-color: rgb(255, 255, 255);
   padding: 30px;
   width:90%;
   height: auto;
-  margin:10px;
+  margin:10px;margin: auto;
   border-radius: 20px;
 }
 .flex{
