--- a/firebase/generadorArticle/generadorArticles.css
+++ b/firebase/generadorArticle/generadorArticles.css
@@ -1,15 +1,14 @@
 *{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-.cab-fondo img{
-  width: 1200px;
-  margin-top: 0px;
-  height: 200px;
+.cab-fondo {
+  background-color: #08103E;
+  height: 150px;
 }
 
 .brand img{
   position: absolute;
-  top: 0px;
+  top: -50px;
   left: 42vw;
 }
 h1,p{
@@ -84,4 +83,13 @@ body{
   background-color: whitesmoke;
   color: black;
   margin: 20px;
+  }
+
+  button{
+    width: 200px;
+    margin-right: 30px;
+  }
+  .botones-estilo-text{
+    display: flex;
+    justify-content: center;
   }
