--- a/css/home.css
+++ b/css/home.css
@@ -31,9 +31,13 @@ body:-webkit-scrollbar-track{
 }
 #clock{
 width: 100%; 
-margin: -50px auto 0px auto;   
+margin: -110px auto 0px auto;   
+padding-top: 50px;
 }
+.background{
+    background-color: #f0f0f1;
 
+}
 .initially-hidden{
     visibility: hidden;
 }
@@ -139,29 +143,7 @@ a .twitter-timeline{
     overflow: hidden;
 }
 
-.calendar{
-    width: 100%;
-    margin-top: 0px;
-}
 
-.titol-calendari{
-    background-color: #08103E;
-    padding: 50px ;
-    position: absolute;
-    width: 100%;
-    color: white;
-    text-align: center;
-    margin-top: 0px;
-    font-size: 1.5em;
-}
-
-
-
-iframe{
-    width: 100%;
-    height: 750px;
-   
-}
 
 .article-general{
     max-width: 1000px;
@@ -171,7 +153,7 @@ iframe{
 }
 .article-general  .subtitol-article{
     font-size: 1.5em;
-    margin-top: -20px;
+    margin-top: 10px;
     padding: 0;
     color:black
 }
