--- a/css/entrevistas.css
+++ b/css/entrevistas.css
@@ -10,7 +10,8 @@ margin: 0px 60px;
 }
 
 .article-entrevistas{
-width: 900px;
+max-width: 900px;
+margin-bottom: 100px;
 }
 .subtitol-article{
     margin: 10px 0px 20px 0px;
@@ -20,8 +21,30 @@ width: 900px;
 margin: 20px 0px;
 line-height: 25px;
 }
-.pageentrevistas  iframe{
-    width: 900px;
-    height: 400px;
+.article-entrevistas iframe{
+    max-width: 400px;
+    width: 100vw;
+    max-height: 250px;
+    height: 100vh;
+}
+.pageentrevistas  .iframe_uno{
+    max-width: 900px;
+    width: 100%;
+    max-height: 400px;
     margin:0;
+}
+
+.otras-entrevistas{
+    margin-bottom: 200px;
+}
+
+.otras-entrevistas h3{
+    margin-bottom: 20px;
+    font-size: 1.3em;
+}
+.videos iframe{
+    max-width: 300px;
+    width: 100vw;
+    max-height: 150px;
+    height: 100vh;
 }
