--- a/firebase/generadorArticle/generadorArticles.css
+++ b/firebase/generadorArticle/generadorArticles.css
@@ -1,6 +1,17 @@
 *{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+
+body{
+  background-color: #08103E;
+  margin: auto;
+  max-width:100vw; 
+  font-family:'Courier New', Courier, monospace;
+  display: flex;
+  flex-direction: column;
+}
+
 .cab-fondo {
   background-color: #08103E;
   height: 150px;
@@ -21,6 +32,7 @@ h1,p{
   margin:auto;
   background-color:white;
   padding: 20px 50px;
+  
 }
 
 #btn{
@@ -31,26 +43,23 @@ h1,p{
   margin: 20px auto 100px auto;
 }
 
-body{
-  background-color: #08103E;
-  margin: auto;
-  max-width: 80vw; 
-  font-family:'Courier New', Courier, monospace;
-  display: flex;
-  flex-direction: column;
+input{
+  padding: 5px;
 }
-
-
 .contenidor{
   display: flex;
   flex-direction: column;
   margin: 10px;
 }
 
-.italic{
+#italic{
   font-style: italic;
 }
 
+#bold{
+  font-weight: 900;
+ margin-left: 20px;
+}
 #contCB{
   column-count: 6;
   column-gap: 50px; 
@@ -59,6 +68,9 @@ body{
 .labelCB{
   display: block;
 }
+.contenidor label{
+  font-weight: 800;
+}
 
 .contImatge{
   display: flex;
@@ -66,6 +78,9 @@ body{
   align-items: center;
   justify-content: center;
   min-height: 200px;
+}
+.contImatge .italic{
+  margin-right: 20px;
 }
 #feedback{
   display: none;
@@ -77,12 +92,13 @@ body{
 }
 
 #contingut {
-  width: 80%; 
+  width:80%; 
   height: auto; 
   padding: 20px;
   background-color: whitesmoke;
   color: black;
-  margin: 20px;
+  margin: 20px auto;
+
   }
 
   button{
