--- a/firebase/test/filtre.css
+++ b/firebase/test/filtre.css
@@ -11,19 +11,40 @@ body{
   height: auto;
   margin:10px;
   border-radius: 20px;
+  visibility: hidden;
 }
 .flex{
   display: flex;
   flex-direction: column-reverse;
 }
 
+.contenidor{
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+}
 
 #contCB{
   column-count: 6;
   column-gap: 50px; 
+  margin-bottom: 30px;
 
 }
 .labelCB{
   display: block;
 }
 
+#filtrar{
+  width: 20%;
+  padding: 10px;
+  position: relative;
+  top:0;
+  bottom:0;
+  left:0;
+  right: 0;
+  margin: auto;
+}
+
+.show{
+  visibility: visible;
+}
