--- a/css/actualitat.css
+++ b/css/actualitat.css
@@ -4,16 +4,10 @@
 .cont-actualitat{
     display: flex;
     justify-content: space-between;
-
     margin: 0px 60px;
 }
 
-.article-actualitat{
-    max-width: 900px;
-}
-.article-actualitat img{
-	width: 100%;
-}
+
 .titol-article{
     font-size: 3em;
     color:#08103E;
@@ -24,106 +18,55 @@
     margin: 10 0px ;
 }
 
-.article-actualitat p{
-    margin: 20px 0px;
-    line-height: 25px;
-}
+
 aside{
     width: 400px;
 	margin-bottom: 100px;
-
+    margin-left: 20px;
+}
+.twitter-timeline{
+    margin-bottom: 50px;
 }
 
-
-* {
-	box-sizing: border-box;
+.article-general  .titol-article{
+    font-size: 2em;
+}
+.contenedor-articulo{
+    max-width: 1000px;
+    margin:0px auto;
+    background-color: white;
+    padding: 50px ;
+    width: 100%;
+}
+.article-general{
+margin-bottom: 100px;
+padding-bottom: 50px;
+border-bottom: 1px solid #cbcbcb;
+}
+.article-general  .subtitol-article{
+    font-size: 1.3em;
+    color:black;
+    padding-left:0;
+    margin-top: 10px;
+}
+.article-general img{
+    max-width: 900px;
+    margin: 0px auto;
+}
+.article-general  p{
+    margin-top: 30px;
+    line-height: 25px;
+}
+.article-general .autor{
+    margin-top: 10px;
+    margin-bottom: 20px;
+    font-style: italic;
 }
 
-.carouselowl-wrp .actualidad{
-	color: rgb(0, 0, 0);
-	min-height: 50vh;
-	align-items: center;
+aside .widget{
+    margin-left: -30px;
 }
-.carouselowl-wrp .actualidad h2{
-    text-align: center;
-    margin:50px auto;
-
-}
-
-
-.carouselowl_contenedor .actualidad{
-	max-width: 1000px;
-	width: 100%;
-	margin: 50px auto 100px auto;
-	position: relative;
-
-}
-
-
-/* --- --- CAROUSEL --- --- */
-
-.carousel__anterior,
-.carousel__siguiente {
-	position: absolute;
-	display: block;
-	width: 30px;
-	height: 50px;
-	border: none;
-	top: calc(50% - 50px);
-	cursor: pointer;
-	line-height: 30px;
-	text-align: center;
-	background: none;
-	color: rgb(12, 12, 12);
-	opacity: 50%;
-    font-size: 2.3em;
-}
-
-.carousel__anterior:hover,
-.carousel__siguiente:hover {
-	opacity: 100%;
-}
-
-.carousel__anterior {
-	left: -30px;
-}
-
-.carousel__siguiente {
-	right: -30px;
-}
-
-.carousel__actualidad {
-	overflow: hidden;
-}
-
-.carousel__actualidad a{
-    text-decoration: none;
-}
-.carousel__elemento {
-	text-align: center;
-	margin-left: 20px;
-
-}
-
-.carousel__indicadores .glider-dot {
-	display: block;
-	width: 30px;
-	height: 40px;
-	background: rgb(151, 151, 151);
-	opacity: .2;
-	border-radius: 0;
-}
-
-.carousel__indicadores .glider-dot:hover {
-	opacity: .5;
-}
-
-.carousel__indicadores .glider-dot.active {
-	opacity: 1;
-}
-.info-tarjeta{
-    background-color: #08103E;
-    padding: 10px 0px;
-    margin:-5px 0px 50px 0px;
-    color:white;
+.flex{
+    display: flex;
+    flex-direction: column-reverse;
 }
