--- a/css/contacte.css
+++ b/css/contacte.css
@@ -9,6 +9,7 @@
 }
 .presentacion p{
     width: 100%;
+    line-height: 25px;
 }
  .presentacion h2{
      text-align: left;
@@ -78,6 +79,7 @@ textarea{
 }
 .pau, .imanol{
     width: 400px;
+    line-height: 25px;
 }
 
 button{
@@ -113,4 +115,15 @@ button:hover{
     letter-spacing: 0px;
     color:black;
     background-color: white;
+}
+
+
+
+@media screen and (max-width: 600px) {
+
+.equipo{
+    flex-wrap:wrap;
+    margin-left: 0px;
+}
+
 }
