--- a/css/entrevistas.css
+++ b/css/entrevistas.css
@@ -8,11 +8,13 @@ display: flex;
 justify-content: space-between;
 margin: 0px 60px;
 }
-
 .article-entrevistas{
-max-width: 900px;
-margin-bottom: 100px;
+    max-width: 1000px;
+    margin:0px auto;
+    background-color: white;
+    padding: 50px 50px ;
 }
+
 .subtitol-article{
     margin: 10px 0px 20px 0px;
 }
@@ -21,9 +23,12 @@ margin-bottom: 100px;
 margin: 20px 0px;
 line-height: 25px;
 }
+.cont-entrevistas    aside{
+    margin-left: 50px;
+}
 .article-entrevistas iframe{
     max-width: 400px;
-    width: 100vw;
+    width: 100%;
     max-height: 250px;
     height: 100vh;
 }
@@ -36,6 +41,8 @@ line-height: 25px;
 
 .otras-entrevistas{
     margin-bottom: 200px;
+    margin-top: 50px;
+
 }
 
 .otras-entrevistas h3{
@@ -48,3 +55,5 @@ line-height: 25px;
     max-height: 150px;
     height: 100vh;
 }
+
+
