--- a/css/home.css
+++ b/css/home.css
@@ -35,14 +35,14 @@ margin: -110px auto 0px auto;
 padding-top: 50px;
 }
 .background{
-    background-color: #f0f0f1;
+    background-color: #f1f1f1;
 
 }
 .initially-hidden{
     visibility: hidden;
 }
 .mockup{
-    background-color: #f0f0f1;
+    background-color: #f1f1f1;
     display: flex;
     justify-content: space-around;
     align-items: top;
@@ -143,30 +143,24 @@ a .twitter-timeline{
     overflow: hidden;
 }
 
+.spotify {
+   width: 100%;
+   margin: 100px auto;
+}
+.spotify .text-spotify{
+    text-align: center;
+    font-size: 1.8em;
+}
+.widget{
+   max-width: 900px;
+   width: 100%;
+   margin: auto;
+}
+.widget iframe{
 
-
-.article-general{
-    max-width: 1000px;
-    margin:0px auto;
-    background-color: white;
-    padding: 50px 50px ;
-}
-.article-general  .subtitol-article{
-    font-size: 1.5em;
-    margin-top: 10px;
-    padding: 0;
-    color:black
-}
-.article-general img{
-    width: 900px;
-    margin: 0px auto;
-}
-.article-general  p{
-    margin-top: 50px;
-    line-height: 25px;
-}
-.article-general .autor{
-    margin-top: 10px;
-    margin-bottom: 30px;
-    font-style: italic;
+   max-width: 900px;
+    margin: 50px;
+    width: 90%;
+    height: 500px;
+ 
 }
