--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -1,10 +1,8 @@
 @media screen and (max-width: 600px) {
+    /*Nav*/
     .brand img{
         width: 250px;
         margin-top: 0px;
-    }
-    #clock{
-        margin: 50px auto;
     }
     .last_hour, .last_hour h2{
         width: 140px;
@@ -13,42 +11,67 @@
     .last_post{
         margin-left: 140px;
     }
+  
+    /*Inici*/
+    #clock{
+        margin: 50px auto;
+    }
+   
     .article3d{
         width: 100vw;
     }
+ 
     .article3d .titol{
-        bottom: 190px;
+        height: 50px;
+        bottom:33vh;
     }
-    
-    
-    .article {
-       width:100vw;
-   }
+    .widget iframe{
+        margin: 20px;
+    }
+    /*Actualitat*/
+  
+   .cont-actualitat{
+    flex-wrap: wrap;
+    padding: 0;
+}
+.contenedor-articulo{
+    margin-bottom: 100px;
 
- .article3d .titol{
-     height: 50px;
-     bottom:33vh;
- }
- .titol h3{
+}
+
+.article-actualitat{
+    width:90vw;
+    padding: 0;
+
+}
+.cont-actualitat aside{
+    display: flex;
+    width: 90%;
+    flex-direction: column;
+    margin-top: 100px;
+}
+/*General para articulos*/
+ .titol-article {
  font-size: 0.9em;
  }
-.subtitol{
+.subtitol-article{
     font-size: 0.7em;
 }
 .article-general{
     padding: 0;
     margin-top:-50px;
-    padding:40px 50px;
+    padding:40px 0px;
 }
 .article-general img{
-    width: 90vw;
+    width: 100vw;
 }
-.titol-article {
+.article-general .titol-article {
     font-size: 2em;
+    margin-bottom: 20px;
 }
-.titol-calendari{
-    font-size: 1em;
-}
+
+    /*Paises*/
+
 .paisos{
     flex-direction: column;
     justify-content: center;
@@ -58,13 +81,30 @@
     flex-wrap:wrap;
     margin-left: 0px;
 }
-
+/*Entrevista*/
 .pageentrevistas  .iframe_uno{
-    max-width: 900px;
     width: 100%;
     max-height: 250px;
     margin:0;
 }
+.cont-entrevistas{
+    margin: 0;
+}
+.cont-entrevistas    aside{
+    margin-left: 50px;
+}
+.otras-entrevistas{
+    margin-bottom: 100px;
+    margin-left: 50px;
+
+}
+.cont-actualitat{
+    margin: 0 20px;
+}
+
+.spotify .text-spotify{
+     font-size: 0.8em;
+ }
 }
     @media screen and (max-width: 800px) {
         .article3d {
@@ -107,6 +147,7 @@
     }
     .cont-actualitat{
         flex-wrap: wrap;
+        padding: 0;
     }
     .article-actualitat{
         width: 400px;
@@ -114,12 +155,11 @@
 
     }
     .cont-entrevistas{
-        flex-wrap: wrap;
-        margin: 0 ;
-        padding: 0px 20px;
+        flex-direction: column;
+        margin: 0;
     }
     .pageentrevistas  .iframe_uno{
-        width: 90vw;
+        width: 100%;
         height: 400px;
     }
     #form{
@@ -156,9 +196,6 @@
             width:100%;
         }
      
-      .article .titol{
-          height: 70px;
-      }
     
       .titol h3{
       font-size: 1em;
@@ -166,13 +203,34 @@
      .subtitol{
          font-size: 0.9em;
      }
+     .cont-actualitat{
+        flex-wrap: wrap;
+        padding: 0;
+    }
+    .cont-actualitat aside{
+        display: flex;
+        width: 90%;
+        justify-content: center;
+        align-items: top;
+        margin-top: 100px;
+    }
      .article-general{
          padding: 0;
          margin-top:-50px;
-         padding:40px 50px;
+         padding:40px 0px;
      }
      .article-general img{
          width: 100%;
+
+     }
+
+ 
+
+     .cont-entrevistas aside{
+         margin-left: 0;
+     }
+     .cont-principal-entrevistas{
+         margin: 0;
      }
      .titol-article {
          font-size: 2em;
@@ -188,11 +246,7 @@
         display: flex;
         flex-wrap: wrap;
     }
-    .article-actualitat{
-        width: 500px;
-        margin-right: 50px;
-    }
-
+ 
     
     #form{
         flex-wrap: wrap;
@@ -221,7 +275,12 @@
             width: 100vw;
             margin-right: 10vw;
         }
-      
+
+        .cont-actualitat{
+            width: 100%;
+            margin: 0;
+        }
+     
         #form{
             flex-wrap: wrap;
         }
